# csi4140

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/: RUBRIC_LINK.txt  presentation.html  presentation.md  presentation.pptx  report.typ  rubric.docx  rubric.md
docs/images/exp1/: log.txt
docs/images/exp2/: logs.txt
docs/images/exp3/: logs.txt
docs/images/exp4/: logs.txt
docs/images/exp5/: logs.txt
docs/images/exp6/: logs.txt
docs/images/exp7/: logs.txt
docs/images/exp8/: logs.txt
docs/images/final/: logs.txt
experiments/: ablation.ipynb  prune_sweep.py  quantize_sweep.py  run_ablation.py
results/logs/: aspect1_log.txt  aspect2_log.txt  aspect3_log.txt  aspect4_log.txt  aspect5_log.txt  aspect6_log.txt
src/: data.py  main.py  model.py  plots.py  prune.py  train.py
src/core/: __init__.py  activations.py  fully_connected.py  losses.py  network.py  protocols.py
src/data/: cifar10.py
src/models/: cifar10_cnn.py
src/network/: __init__.py  neural_network.py
src/network/activation/: __init__.py  identity.py  relu.py  sigmoid.py  softmax.py
src/network/layer/: __init__.py  activation_layer.py  convolutional.py  dropout.py  flatten.py  fully_connected.py
src/network/loss/: __init__.py  cross_entropy.py
src/network/neural_network/: __init__.py  neural_network.py
src/network/optimizer/: __init__.py  adam.py  base.py  momentum.py  sgd.py
src/network/regularizer/: l2.py  (+1 more)
src/utils/: visualization.py
tests/: test_model.py  test_train.py
tests/data/: test_cifar10.py
tests/models/: test_cifar10_cnn.py
(+11 files in other folders)
