[project]
name = "csi4140"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.3",
    "numpy>=2.4.2",
    "returns>=0.26.0",
    "toolz>=1.1.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
