[project]
name = "csi4140"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "returns>=0.26.0",
    "toolz>=1.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
main = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
